# panda-core

./: CMakeLists.txt  README.md
policykit/: CMakeLists.txt  main.cpp  panda-policykit-agent.desktop  policykitagent.cpp  policykitagent.h  policykitagentgui.cpp  policykitagentgui.h  policykitagentgui.ui
screen-brightness/: CMakeLists.txt  org.panda.brightness.pkexec.policy
session/: CMakeLists.txt  application.cpp  application.h  idlewatcher.cpp  module.cpp  module.h  org.panda.Session.xml  panda-session.desktop  sessiondbusadaptor.h  xdgautostart.cpp  xdgautostart.h  xdgdesktopfile.h  xdgdirs.cpp
session/power/: power.cpp
session/src/: application.cpp  application.h  idlewatcher.cpp  idlewatcher.h  module.cpp  module.h  modulemanager.cpp  modulemanager.h  sessiondbusadaptor.h  xdgautostart.h  xdgdesktopfile.cpp  xdgdirs.cpp  xdgmacros.h
settings-daemon/: CMakeLists.txt  application.cpp  application.h  dbusadaptor.h
settings-daemon/audio/: audiodbusadaptor.h  audiomanager.cpp  audiomanager.h  org.panda.Audio.xml
settings-daemon/brightness/: brightnessdbusadaptor.h  brightnessmanager.cpp  brightnessmanager.h  org.panda.Brightness.xml
settings-daemon/theme/: org.panda.Theme.xml  themedbusadaptor.h  thememanager.cpp  thememanager.h
shutdown/: CMakeLists.txt  main.cpp  powermanager.cpp  powermanager.h
xembed-sni-proxy/: CMakeLists.txt
